# spotdrop-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  seed_spots.py  seed_spots_2.py
agents/: architect.md  debugger.md  developer.md  reviewer.md
alembic/: env.py
alembic/versions/: 001_initial.py
skills/: build.md  func-start.md  lint.md  test.md
src/: main.py
src/api/: deps.py
src/api/routes/: __init__.py  auth.py  spots.py  users.py
src/core/: config.py  exceptions.py  security.py
src/db/: session.py
src/models/: __init__.py  image.py  spot.py  user.py
src/schemas/: __init__.py  image.py  spot.py  user.py
src/services/: __init__.py  geocoding.py  spots.py  storage.py
tests/: conftest.py  test_auth.py  test_spots.py  test_users.py
